@@ -99,20 +99,20 @@ public class ConferenciaEncalheParcialRepositoryImplTest extends AbstractReposit
 		cromoReiLeao.addFornecedor(fornecedorDinap);
 		save(cromoReiLeao);
 
-		ProdutoEdicao veja1 = Fixture.produtoEdicao(1L, 10, 7, new Long(100),
+		ProdutoEdicao veja1 = Fixture.produtoEdicao(1L, 10, 7, Long.valueOf(100),
 				BigDecimal.TEN, new BigDecimal(15), "ABCDEFGHIJKLMNOPQ", veja, null, false);
 
-		ProdutoEdicao quatroRoda2 = Fixture.produtoEdicao(2L, 15, 30, new Long(100),
+		ProdutoEdicao quatroRoda2 = Fixture.produtoEdicao(2L, 15, 30, Long.valueOf(100),
 				BigDecimal.TEN, BigDecimal.TEN, "ABCDEFGHIJKLMNOPA", quatroRodas, 
 				null, false);
 
-		ProdutoEdicao infoExame3 = Fixture.produtoEdicao(3L, 5, 30, new Long(100),
+		ProdutoEdicao infoExame3 = Fixture.produtoEdicao(3L, 5, 30, Long.valueOf(100),
 				BigDecimal.TEN, new BigDecimal(12), "ABCDEFGHIJKLMNOPB", infoExame, null, false);
 
-		ProdutoEdicao capricho1 = Fixture.produtoEdicao(1L, 10, 15, new Long(120),
+		ProdutoEdicao capricho1 = Fixture.produtoEdicao(1L, 10, 15, Long.valueOf(120),
 				BigDecimal.TEN, BigDecimal.TEN, "ABCDEFGHIJKLMNOPC", capricho, null, false);
 		
-		ProdutoEdicao cromoReiLeao1 = Fixture.produtoEdicao(1L, 100, 60, new Long(10),
+		ProdutoEdicao cromoReiLeao1 = Fixture.produtoEdicao(1L, 100, 60, Long.valueOf(10),
 				BigDecimal.ONE, new BigDecimal(1.5), "ABCDEFGHIJKLMNOPD", cromoReiLeao, null, false);
 		
 		save(veja1, quatroRoda2, infoExame3, capricho1, cromoReiLeao1);
