@@ -123,23 +123,23 @@ public class ExpectativaEncalheDataTest extends AbstractRepositoryImplTest {
 		cromoReiLeao.addFornecedor(fornecedorDinap);
 		save(cromoReiLeao);
 
-		ProdutoEdicao veja1 = Fixture.produtoEdicao(1L, 10, 7, new Long(100),
+		ProdutoEdicao veja1 = Fixture.produtoEdicao(1L, 10, 7, Long.valueOf(100),
 				BigDecimal.TEN, new BigDecimal(15), "ABCDEFGHIJKLMNOPQ", veja, 
 			porcentagemExpectativaVenda, false);
 
-		ProdutoEdicao quatroRoda2 = Fixture.produtoEdicao(2L, 15, 30, new Long(100),
+		ProdutoEdicao quatroRoda2 = Fixture.produtoEdicao(2L, 15, 30, Long.valueOf(100),
 				BigDecimal.TEN, BigDecimal.TEN, "ABCDEFGHIJKLMNOPA", quatroRodas, 
 			porcentagemExpectativaVenda, false);
 		
-		ProdutoEdicao infoExame3 = Fixture.produtoEdicao(3L, 5, 30, new Long(100),
+		ProdutoEdicao infoExame3 = Fixture.produtoEdicao(3L, 5, 30, Long.valueOf(100),
 				BigDecimal.TEN, new BigDecimal(12), "ABCDEFGHIJKLMNOPC", infoExame, 
 			porcentagemExpectativaVenda, false);
 		
-		ProdutoEdicao capricho1 = Fixture.produtoEdicao(1L, 10, 15, new Long(120),
+		ProdutoEdicao capricho1 = Fixture.produtoEdicao(1L, 10, 15, Long.valueOf(120),
 				BigDecimal.TEN, BigDecimal.TEN, "ABCDEFGHIJKLMNOPD", capricho, 
 			porcentagemExpectativaVenda, false);
 		
-		ProdutoEdicao cromoReiLeao1 = Fixture.produtoEdicao(1L, 100, 60, new Long(10),
+		ProdutoEdicao cromoReiLeao1 = Fixture.produtoEdicao(1L, 100, 60, Long.valueOf(10),
 				BigDecimal.ONE, new BigDecimal(1.5), "ABCDEFGHIJKLMNOPE", cromoReiLeao, 
 			porcentagemExpectativaVenda, false);
 		
